--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 .idea
 Flask-Valheim-Docker.iml
+.idea/workspace.xml
+main/launch/__pycache__/launchListen.cpython-38.pyc
