--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 .idea
-
+Flask-Valheim-Docker.iml
 .idea/workspace.xml
 main/launch/__pycache__/launchClient.cpython-38.pyc
-main/launch/__pycache__/test.cpython-38.pyc
